--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dev-utils": "^10.2.0",
     "react-dom": "^16.12.0",
+    "react-jsonschema-form": "^1.8.1",
     "react-scripts": "3.4.0"
   },
   "scripts": {
