--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "xmlbuilder2": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "nodemon"
+    "dev": "nodemon"
   }
 }
