--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "mysql2": "^2.1.0",
     "xmlbuilder2": "^1.4.3"
   },
@@ -17,6 +20,7 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
+    "start": "cross-env NODE_ENV=production node server.js",
     "dev": "nodemon"
   }
 }
