--- a/client/package.json
+++ b/client/package.json
@@ -3,28 +3,47 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/dom": "^7.30.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^4.4.1",
+    "cross-env": "^7.0.3",
+    "eslint-plugin-prettier": "^3.3.1",
+    "https": "^1.0.0",
     "lodash": "^4.17.19",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dev-utils": "^10.2.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-jsonschema-form": "^1.8.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.3",
+    "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "csp-html-webpack-plugin": "^5.1.0",
+    "customize-cra": "^1.0.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
+    "react-app-rewired": "^2.1.8",
+    "react-dev-utils": "^10.2.0"
+  },
+  "proxy": "http://localhost:8099",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "cross-env INLINE_RUNTIME_CHUNK=false react-app-rewired build",
+    "test": "react-app-rewired test"
   },
-  "proxy": "http://localhost:8099/",
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
