--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
   "author": "André Martins <https://github.com/fmartins-andre>",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.2",
-    "dateformat": "^3.0.3",
+    "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.3",
-    "mysql2": "^2.1.0",
-    "xmlbuilder2": "^1.4.3"
+    "helmet": "^4.4.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "mysql2": "^2.2.5",
+    "xmlbuilder2": "^2.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "nodemon": "^2.0.2",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node server.js",
-    "dev": "nodemon"
+    "dev": "cross-env NODE_ENV=development nodemon"
   }
 }
