--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
+    "html-webpack-plugin": "^4.5.2",
     "prettier": "^2.2.1",
     "react-app-rewired": "^2.1.8",
-    "react-dev-utils": "^11.0.4"
+    "react-dev-utils": "^11.0.4",
+    "webpack": "~4.44.2"
   },
   "proxy": "http://localhost:8099",
   "scripts": {
