--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-autosanitizer": "^1.0.2",
     "helmet": "^4.4.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
